[project]
name = "quantum-decoder"
version = "0.1.0"
description = "Stim Quantum error decoder experiments"
authors = [
    { name = "Samantha Chulamorkodt", email = "schulamorkodt8@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "stim",
    "ldpc",
    "scipy",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
